--- a/Resources/English.lproj/MainMenu.xib
+++ b/Resources/English.lproj/MainMenu.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4510" systemVersion="13E28" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <deployment defaultVersion="1080" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -14,16 +13,15 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <window title="Crash Symbolicator" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="371">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
-            <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="417" y="208" width="480" height="400"/>
+            <rect key="contentRect" x="345" y="82" width="650" height="650"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1280" height="778"/>
-            <value key="minSize" type="size" width="480" height="400"/>
+            <value key="minSize" type="size" width="650" height="650"/>
             <view key="contentView" id="372">
-                <rect key="frame" x="0.0" y="0.0" width="480" height="400"/>
+                <rect key="frame" x="0.0" y="0.0" width="650" height="650"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField verticalHuggingPriority="750" id="555">
-                        <rect key="frame" x="17" y="361" width="75" height="17"/>
+                        <rect key="frame" x="17" y="611" width="75" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="App Path:" id="572">
                             <font key="font" metaFont="system"/>
@@ -32,7 +30,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" id="556">
-                        <rect key="frame" x="115" y="358" width="297" height="22"/>
+                        <rect key="frame" x="115" y="608" width="467" height="22"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="571">
                             <font key="font" metaFont="system"/>
@@ -41,7 +39,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" id="557">
-                        <rect key="frame" x="17" y="319" width="75" height="17"/>
+                        <rect key="frame" x="17" y="569" width="75" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="dSYM Path:" id="570">
                             <font key="font" metaFont="system"/>
@@ -50,7 +48,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" id="558">
-                        <rect key="frame" x="115" y="316" width="297" height="22"/>
+                        <rect key="frame" x="115" y="566" width="467" height="22"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="569">
                             <font key="font" metaFont="system"/>
@@ -59,7 +57,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" id="559">
-                        <rect key="frame" x="17" y="235" width="75" height="17"/>
+                        <rect key="frame" x="17" y="485" width="75" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Address:" id="568">
                             <font key="font" metaFont="system"/>
@@ -68,7 +66,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" id="560">
-                        <rect key="frame" x="115" y="232" width="297" height="22"/>
+                        <rect key="frame" x="115" y="482" width="467" height="22"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="567">
                             <font key="font" metaFont="system"/>
@@ -77,7 +75,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" id="580">
-                        <rect key="frame" x="17" y="277" width="75" height="17"/>
+                        <rect key="frame" x="17" y="527" width="75" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Crash Path:" id="583">
                             <font key="font" metaFont="system"/>
@@ -86,7 +84,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" id="581">
-                        <rect key="frame" x="115" y="274" width="297" height="22"/>
+                        <rect key="frame" x="115" y="524" width="467" height="22"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="582">
                             <font key="font" metaFont="system"/>
@@ -94,48 +92,37 @@
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <button verticalHuggingPriority="750" id="561">
-                        <rect key="frame" x="206" y="190" width="69" height="25"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <buttonCell key="cell" type="squareTextured" title="Track It" bezelStyle="texturedSquare" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="566">
-                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                            <font key="font" metaFont="system"/>
-                        </buttonCell>
-                        <connections>
-                            <action selector="symbolicateButtonClicked:" target="573" id="575"/>
-                        </connections>
-                    </button>
                     <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="562">
-                        <rect key="frame" x="20" y="20" width="440" height="153"/>
+                        <rect key="frame" x="20" y="20" width="610" height="403"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <clipView key="contentView" id="TrO-vb-57Z">
-                            <rect key="frame" x="1" y="1" width="438" height="151"/>
+                            <rect key="frame" x="1" y="1" width="608" height="401"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textView importsGraphics="NO" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" spellingCorrection="YES" smartInsertDelete="YES" id="563">
-                                    <rect key="frame" x="0.0" y="0.0" width="438" height="151"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="608" height="401"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="438" height="151"/>
-                                    <size key="maxSize" width="463" height="10000000"/>
+                                    <size key="minSize" width="608" height="401"/>
+                                    <size key="maxSize" width="982" height="10000000"/>
                                     <color key="insertionPointColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="438" height="151"/>
-                                    <size key="maxSize" width="463" height="10000000"/>
+                                    <size key="minSize" width="608" height="401"/>
+                                    <size key="maxSize" width="982" height="10000000"/>
                                 </textView>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </clipView>
-                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" id="564">
+                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="564">
                             <rect key="frame" x="-100" y="-100" width="87" height="18"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
-                        <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" id="565">
+                        <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="565">
                             <rect key="frame" x="423" y="1" width="16" height="151"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
                     <button verticalHuggingPriority="750" tag="11" id="586">
-                        <rect key="frame" x="426" y="356" width="40" height="26"/>
+                        <rect key="frame" x="596" y="606" width="40" height="26"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="squareTextured" bezelStyle="texturedSquare" image="OpenPanelIcon" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="587">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -146,7 +133,7 @@
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" tag="12" id="588">
-                        <rect key="frame" x="426" y="314" width="40" height="26"/>
+                        <rect key="frame" x="596" y="564" width="40" height="26"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="squareTextured" bezelStyle="texturedSquare" image="OpenPanelIcon" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="589">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -157,7 +144,7 @@
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" tag="13" id="592">
-                        <rect key="frame" x="426" y="272" width="40" height="26"/>
+                        <rect key="frame" x="596" y="522" width="40" height="26"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="squareTextured" bezelStyle="texturedSquare" image="OpenPanelIcon" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="593">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -167,6 +154,34 @@
                             <action selector="openFileButtonClicked:" target="573" id="596"/>
                         </connections>
                     </button>
+                    <customView id="qsM-Dm-x4v">
+                        <rect key="frame" x="225" y="437" width="200" height="30"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <subviews>
+                            <button verticalHuggingPriority="750" id="561">
+                                <rect key="frame" x="0.0" y="2" width="70" height="25"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <buttonCell key="cell" type="squareTextured" title="Track It" bezelStyle="texturedSquare" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="566">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="trackItButtonClicked:" target="573" id="Q6r-zG-vcW"/>
+                                </connections>
+                            </button>
+                            <button verticalHuggingPriority="750" id="o0Z-a8-Qkn">
+                                <rect key="frame" x="100" y="2" width="100" height="25"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <buttonCell key="cell" type="squareTextured" title="Symbolicate" bezelStyle="texturedSquare" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="ccd-vA-Rv8">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="symbolicateButtonClicked:" target="573" id="2Bg-5I-2Cd"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                    </customView>
                 </subviews>
             </view>
             <connections>
