--- a/Resources/English.lproj/MainMenu.xib
+++ b/Resources/English.lproj/MainMenu.xib
@@ -16,7 +16,7 @@
             <rect key="contentRect" x="345" y="82" width="650" height="650"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1280" height="778"/>
             <value key="minSize" type="size" width="650" height="650"/>
-            <view key="contentView" id="372">
+            <view key="contentView" wantsLayer="YES" id="372">
                 <rect key="frame" x="0.0" y="0.0" width="650" height="650"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
@@ -154,7 +154,7 @@
                             <action selector="openFileButtonClicked:" target="573" id="596"/>
                         </connections>
                     </button>
-                    <customView id="qsM-Dm-x4v">
+                    <customView id="qsM-Dm-x4v" userLabel="Button Holder View">
                         <rect key="frame" x="225" y="437" width="200" height="30"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <subviews>
@@ -181,6 +181,32 @@
                                 </connections>
                             </button>
                         </subviews>
+                    </customView>
+                    <customView hidden="YES" wantsLayer="YES" id="P7T-JB-1g0" userLabel="Progress Holder View" customClass="TouchBlockerNSView">
+                        <rect key="frame" x="0.0" y="0.0" width="650" height="650"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <customView wantsLayer="YES" id="NBC-Xt-WoE" userLabel="Progress Indicator Background View">
+                                <rect key="frame" x="250" y="250" width="150" height="150"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <progressIndicator wantsLayer="YES" horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" bezeled="NO" style="spinning" id="Slu-DI-xK2">
+                                        <rect key="frame" x="59" y="76" width="32" height="32"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                    </progressIndicator>
+                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="YzV-RW-z0Y">
+                                        <rect key="frame" x="0.0" y="42" width="150" height="17"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Symbolicating..." id="Opp-it-W8F">
+                                            <font key="font" metaFont="system" size="15"/>
+                                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                        </textFieldCell>
+                                    </textField>
+                                </subviews>
+                            </customView>
+                        </subviews>
+                        <animations/>
                     </customView>
                 </subviews>
             </view>
@@ -286,6 +312,10 @@
                 <outlet property="appPathTextField" destination="556" id="577"/>
                 <outlet property="crashPathTextField" destination="581" id="585"/>
                 <outlet property="dsymTextField" destination="558" id="578"/>
+                <outlet property="progressHolderView" destination="P7T-JB-1g0" id="rac-4I-2bB"/>
+                <outlet property="progressIndicatorBackgroundView" destination="NBC-Xt-WoE" id="jNh-QK-DiY"/>
+                <outlet property="progressIndicatorTextField" destination="YzV-RW-z0Y" id="Yeu-Yw-pVP"/>
+                <outlet property="progressIndicatorView" destination="Slu-DI-xK2" id="VbM-dS-Buo"/>
                 <outlet property="symbolicateResultScrollView" destination="562" id="579"/>
             </connections>
         </customObject>
