--- a/Resources/English.lproj/MainMenu.xib
+++ b/Resources/English.lproj/MainMenu.xib
@@ -30,7 +30,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" id="556">
-                        <rect key="frame" x="115" y="608" width="467" height="22"/>
+                        <rect key="frame" x="115" y="608" width="450" height="22"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="571">
                             <font key="font" metaFont="system"/>
@@ -48,7 +48,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" id="558">
-                        <rect key="frame" x="115" y="566" width="467" height="22"/>
+                        <rect key="frame" x="115" y="566" width="450" height="22"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="569">
                             <font key="font" metaFont="system"/>
@@ -57,7 +57,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" id="559">
-                        <rect key="frame" x="17" y="485" width="75" height="17"/>
+                        <rect key="frame" x="17" y="444" width="75" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Address:" id="568">
                             <font key="font" metaFont="system"/>
@@ -66,7 +66,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" id="560">
-                        <rect key="frame" x="115" y="482" width="467" height="22"/>
+                        <rect key="frame" x="115" y="441" width="450" height="22"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="567">
                             <font key="font" metaFont="system"/>
@@ -84,7 +84,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" id="581">
-                        <rect key="frame" x="115" y="524" width="467" height="22"/>
+                        <rect key="frame" x="115" y="524" width="450" height="22"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="582">
                             <font key="font" metaFont="system"/>
@@ -122,7 +122,7 @@
                         </scroller>
                     </scrollView>
                     <button verticalHuggingPriority="750" tag="11" id="586">
-                        <rect key="frame" x="596" y="606" width="40" height="26"/>
+                        <rect key="frame" x="588" y="606" width="40" height="26"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="squareTextured" bezelStyle="texturedSquare" image="OpenPanelIcon" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="587">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -133,7 +133,7 @@
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" tag="12" id="588">
-                        <rect key="frame" x="596" y="564" width="40" height="26"/>
+                        <rect key="frame" x="588" y="564" width="40" height="26"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="squareTextured" bezelStyle="texturedSquare" image="OpenPanelIcon" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="589">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -144,7 +144,7 @@
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" tag="13" id="592">
-                        <rect key="frame" x="596" y="522" width="40" height="26"/>
+                        <rect key="frame" x="588" y="522" width="40" height="26"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="squareTextured" bezelStyle="texturedSquare" image="OpenPanelIcon" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="593">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -154,50 +154,44 @@
                             <action selector="openFileButtonClicked:" target="573" id="596"/>
                         </connections>
                     </button>
-                    <customView id="qsM-Dm-x4v" userLabel="Button Holder View">
-                        <rect key="frame" x="225" y="437" width="200" height="30"/>
+                    <button toolTip="Provide App, dSYM, Crash File paths and Memory address of the crash." verticalHuggingPriority="750" id="561">
+                        <rect key="frame" x="573" y="439" width="70" height="25"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="squareTextured" title="Track It" bezelStyle="texturedSquare" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="566">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="trackItButtonClicked:" target="573" id="Q6r-zG-vcW"/>
+                        </connections>
+                    </button>
+                    <button toolTip="Provide App, dSYM and Crash File paths." verticalHuggingPriority="750" id="o0Z-a8-Qkn">
+                        <rect key="frame" x="275" y="480" width="100" height="25"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <subviews>
-                            <button verticalHuggingPriority="750" id="561">
-                                <rect key="frame" x="0.0" y="2" width="70" height="25"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <buttonCell key="cell" type="squareTextured" title="Track It" bezelStyle="texturedSquare" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="566">
-                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="system"/>
-                                </buttonCell>
-                                <connections>
-                                    <action selector="trackItButtonClicked:" target="573" id="Q6r-zG-vcW"/>
-                                </connections>
-                            </button>
-                            <button verticalHuggingPriority="750" id="o0Z-a8-Qkn">
-                                <rect key="frame" x="100" y="2" width="100" height="25"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <buttonCell key="cell" type="squareTextured" title="Symbolicate" bezelStyle="texturedSquare" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="ccd-vA-Rv8">
-                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="system"/>
-                                </buttonCell>
-                                <connections>
-                                    <action selector="symbolicateButtonClicked:" target="573" id="2Bg-5I-2Cd"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                    </customView>
-                    <customView hidden="YES" wantsLayer="YES" id="P7T-JB-1g0" userLabel="Progress Holder View" customClass="TouchBlockerNSView">
+                        <buttonCell key="cell" type="squareTextured" title="Symbolicate" bezelStyle="texturedSquare" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="ccd-vA-Rv8">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="symbolicateButtonClicked:" target="573" id="2Bg-5I-2Cd"/>
+                        </connections>
+                    </button>
+                    <customView hidden="YES" wantsLayer="YES" id="Dri-Re-39i" userLabel="Progress Holder View" customClass="TouchBlockerNSView">
                         <rect key="frame" x="0.0" y="0.0" width="650" height="650"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <customView wantsLayer="YES" id="NBC-Xt-WoE" userLabel="Progress Indicator Background View">
+                            <customView wantsLayer="YES" id="9C9-8G-9C7" userLabel="Progress Indicator Background View">
                                 <rect key="frame" x="250" y="250" width="150" height="150"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <progressIndicator wantsLayer="YES" horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" bezeled="NO" style="spinning" id="Slu-DI-xK2">
+                                    <progressIndicator wantsLayer="YES" horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" bezeled="NO" style="spinning" id="mIN-fY-rlE">
                                         <rect key="frame" x="59" y="76" width="32" height="32"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                     </progressIndicator>
-                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="YzV-RW-z0Y">
+                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="fok-nN-ujL">
                                         <rect key="frame" x="0.0" y="42" width="150" height="17"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Symbolicating..." id="Opp-it-W8F">
+                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Symbolicating..." id="d9Z-qY-UM6">
                                             <font key="font" metaFont="system" size="15"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -206,13 +200,13 @@
                                 </subviews>
                             </customView>
                         </subviews>
-                        <animations/>
                     </customView>
                 </subviews>
             </view>
             <connections>
                 <outlet property="menu" destination="29" id="Bk1-SP-fqT"/>
             </connections>
+            <point key="canvasLocation" x="208" y="430"/>
         </window>
         <customObject id="494" customClass="CrashSymbolicateAppDelegate">
             <connections>
@@ -312,10 +306,10 @@
                 <outlet property="appPathTextField" destination="556" id="577"/>
                 <outlet property="crashPathTextField" destination="581" id="585"/>
                 <outlet property="dsymTextField" destination="558" id="578"/>
-                <outlet property="progressHolderView" destination="P7T-JB-1g0" id="rac-4I-2bB"/>
-                <outlet property="progressIndicatorBackgroundView" destination="NBC-Xt-WoE" id="jNh-QK-DiY"/>
-                <outlet property="progressIndicatorTextField" destination="YzV-RW-z0Y" id="Yeu-Yw-pVP"/>
-                <outlet property="progressIndicatorView" destination="Slu-DI-xK2" id="VbM-dS-Buo"/>
+                <outlet property="progressHolderView" destination="Dri-Re-39i" id="qhM-9K-RPk"/>
+                <outlet property="progressIndicatorBackgroundView" destination="9C9-8G-9C7" id="5MK-Li-YyT"/>
+                <outlet property="progressIndicatorTextField" destination="fok-nN-ujL" id="9vL-0l-L9U"/>
+                <outlet property="progressIndicatorView" destination="mIN-fY-rlE" id="9xI-G9-1hn"/>
                 <outlet property="symbolicateResultScrollView" destination="562" id="579"/>
             </connections>
         </customObject>
